# degrading-anxiety

./: .gitignore  compose.prod.yml
.github/workflows/: deploy.yml  tauri-android-release.yml  tauri-release.yml
apps/desktop/: README.md
apps/web/: README.md
backend/: .dockerignore  pyproject.toml
backend/api/: Dockerfile  main.py  pyproject.toml
backend/contracts/: pyproject.toml
backend/contracts/src/contracts/: __init__.py
backend/contracts/src/degrading_anxiety_contracts/: __init__.py  schedule.py
backend/radicale/: Dockerfile  config  entrypoint.sh
backend/schedule/: Dockerfile  alloc.py  main.py  new.py  pyproject.toml  radicale.py
backend/schedule/tests/: test_alloc.py  test_calendar_routes.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: README.md  package.json
frontend/app/src/lib/: App.svelte  index.ts  routine.ts
frontend/app/src/lib/api/: index.ts  schema.d.ts
frontend/app/src/lib/components/: CredentialRow.svelte  RoutineEventForm.svelte  (+3 more)
frontend/app/src/routes/: +page.svelte
frontend/desktop/: README.md  package.json
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/capabilities/: default.json
frontend/desktop/src/lib/: store.ts
frontend/desktop/src/routes/: +page.svelte
frontend/web/: package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
frontend/web/src/lib/: store.ts
frontend/web/src/routes/: +page.svelte
services/api/: pyproject.toml
services/schedule/: alloc.py  main.py  new.py  pyproject.toml  radicale.py
(+3 files in other folders)
