[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.6.3",
    "degrading-anxiety-contracts",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
]

[tool.uv.sources]
degrading-anxiety-contracts = { workspace = true }
