[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.6.3",
    "degrading-anxiety-contracts",
    "fastapi>=0.139.2",
    "gunicorn>=26.0.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]

[tool.uv.sources]
degrading-anxiety-contracts = { workspace = true }
