[project]
name = "contracts"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "naroah", email = "givefacegod@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
